--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: music
-description: A new Flutter application.
+description: Flutter music App UI.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
@@ -22,6 +22,8 @@ environment:
 
 dependencies:
   flutter:
+    sdk: flutter
+  flutter_localizations:
     sdk: flutter
   get: ^2.13.1
   easy_localization: ^2.3.2
@@ -57,6 +59,7 @@ flutter:
 
   assets:
     - assets/languages/ar-IQ.json
+    - assets/languages/ku-IQ.json
     - assets/png/
 
   # An image asset can refer to one or more resolution-specific "variants", see
